<resources>
  <string name="app_name">Android Application</string>
  <string name="initialization">Initialization</string>
  <string name="make_new_admin">Make New Admin</string>
  <string name="make_new_employee">Make New Employee</string>
  <string name="add_items_to_store">Add Items To Store</string>
  <string name="action_restock">Restock</string>
  <string name="zero">0</string>
  <string name="plus">+</string>
  <string name="minus">-</string>
  <string name="item_id">Item Id</string>
  <string name="title_activity_login">Log in</string>
  <string name="employee_id">Employee Id</string>
  <string name="customer_id">Customer Id</string>
  <string name="prompt_user">User Id</string>
  <string name="prompt_name">Name</string>
  <string name="prompt_age">Age</string>
  <string name="prompt_address">Address</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="action_sign_up">Sign up</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="authenticate_new_employee">Authenticate New Employee</string>
  <string name="make_new_user">Make New User</string>
  <string name="make_new_account">Make New Account</string>
  <string name="make_account">Make Account</string>
  <string name="exit">Exit</string>
  <string name="show_sales_by_user">Show Sales By User</string>
  <string name="promote_employee">Promote Employee</string>
  <string name="view_books">View Books</string>
  <string name="view_inactive">View Inactive Accounts</string>
  <string name="view_active">View Active Accounts</string>
  <string name="serialize"> Serialize Database</string>
  <string name="deserialize">Deserialize Database</string>
  <string name="restore_shopping_cart">Restore Shopping Cart</string>
  <string name="check_out">Check Out</string>
  <string name="remove_item_from_cart">Remove Item From Cart</string>
  <string name="total_price">Total Price</string>
  <string name="add_item_to_cart">Add Item To Cart</string>
  <string name="items_in_cart">Items in Cart</string>

  <string name="action_promote">Promote</string>
  <string name="action_submit">Submit</string>

  <string name="prompt_promote">Which employee would you like to promote ?</string>
  <string name="prompt_inactive_acc">Which customer\'s inactive
        account would you like to view ?</string>
  <string name="prompt_active_acc">Which customer\'s active
        account would you like to view ?</string>

  <string name="prompt_ser">Are you sure to serialize the database?</string>
  <string name="prompt_deser">Are you sure to de-serialize the database?</string>

  <string name="add_item">Add</string>
  <string name="prompt_item_quantity">Quantity</string>
  <string name="remove_item">Remove</string>
  <string name="save_shopping_cart">Save Current Shopping Cart</string>
  <string name="save_cart_account">Select Account for Saving of Shopping Cart</string>
  <string name="prompt_account_ID">Account ID</string>
  <string name="submit">Submit</string>
  <string name="confirm_checkout">Confirm Checkout</string>

  <string name="current_cart">Current Items in Cart:</string>
  <string name="prompt_item_id">Item ID</string>

  <string name="store_name">Pineapple Store</string>

</resources>
