<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backGround"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".MainActivity">

    <Button
      android:id="@+id/button_admin_create"
      style="@android:style/Widget.Holo.Button"
      android:layout_width="@dimen/btn_width"
      android:layout_height="@dimen/btn_height"
      android:layout_marginBottom="32sp"
      android:backgroundTint="@color/colorPrimaryDark"
      android:text="@string/make_new_admin"
      android:textColor="@color/btnTextColor"
      app:icon="@drawable/new_person"/>

    <Button
      android:id="@+id/button_employee_create"
      style="@android:style/Widget.Holo.Button"
      android:layout_width="@dimen/btn_width"
      android:layout_height="@dimen/btn_height"
      android:layout_marginBottom="32sp"
      android:backgroundTint="@color/colorPrimaryDark"
      android:text="@string/make_new_employee"
      android:textColor="@color/btnTextColor"
      app:icon="@drawable/new_person"/>

    <Button
      android:id="@+id/exit_btn"
      style="@android:style/Widget.Holo.Button"
      android:layout_width="@dimen/btn_width"
      android:layout_height="@dimen/btn_height"
      android:layout_marginBottom="32sp"
      android:backgroundTint="@color/colorPrimaryDark"
      android:text="@string/exit"
      android:textColor="@color/btnTextColor"
      app:icon="@drawable/exit"/>

</LinearLayout>