<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backGround"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".LogInActivity">

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

        <Spinner
          android:id="@+id/roles"
          android:layout_width="150sp"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20sp"
          android:divider="@color/black"
          android:dividerHeight="0.5dp"
          android:dropDownWidth="150sp"
          android:popupBackground="@color/btnTextColor" />

        <TextView
          android:layout_width="20sp"
          android:layout_height="20sp"
          android:layout_marginBottom="20sp"
          android:background="@drawable/dropdown" />

    </RelativeLayout>


    <EditText
      android:id="@+id/userId"
      style="@android:style/Widget.EditText"
      android:layout_width="match_parent"
      android:layout_height="64sp"
      android:layout_marginHorizontal="35dp"
      android:layout_marginBottom="32sp"
      android:backgroundTint="@color/colorPrimary"
      android:ems="15"
      android:hint="@string/prompt_user"
      android:importantForAutofill="no"
      android:inputType="textPersonName"
      android:textColor="@color/black" />

    <EditText
      android:id="@+id/editPassword"
      android:layout_width="match_parent"
      android:layout_height="64sp"
      android:layout_marginHorizontal="35dp"
      android:layout_marginBottom="32sp"
      android:backgroundTint="@color/colorPrimary"
      android:ems="10"
      android:hint="@string/prompt_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:textColor="@color/black" />


    <Button
      android:id="@+id/button_log_in"
      style="@android:style/Widget.Holo.Button"
      android:layout_width="200dp"
      android:layout_height="@dimen/btn_height"
      android:backgroundTint="@color/colorPrimaryDark"
      android:text="@string/action_sign_in"
      android:textColor="@color/btnTextColor"
      app:icon="@drawable/signin" />

</LinearLayout>